<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/MyerListGray"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                tools:context="activity.AboutActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/texture_background"/>

    <include layout="@layout/status_bar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/activity_start_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/launcher_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/myer"
                android:textColor="@android:color/black"
                android:textSize="40sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-bold"
                android:gravity="center"
                android:text="@string/list"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:alpha="0.7"
            android:fontFamily="sans-serif-light"
            android:text="@string/for_windows_10_and_android"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:elevation="0dp"
                card_view:cardBackgroundColor="@color/MyerListBlue"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="0dp">

                <TextView
                    android:id="@+id/versionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="3dp"
                    android:text="1.0.0"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/credit"
                    android:textColor="@color/MyerListBlue"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp"
                    android:maxWidth="250dp"
                    android:text="@string/juniperphoton"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/feedback"
                    android:textColor="@color/MyerListBlue"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:elevation="0sp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
                    card_view:cardBackgroundColor="@android:color/transparent"
                    card_view:cardCornerRadius="0dp"
                    card_view:cardElevation="0dp">

                    <RelativeLayout
                        android:id="@+id/email_rl"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ripple_clip"
                        android:clickable="true">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_gravity="center_horizontal"
                            android:autoLink="web"
                            android:padding="10sp"
                            android:text="@string/i_have_an_idea"
                            android:textColor="@android:color/black"
                            android:textColorLink="@android:color/black"
                            android:textSize="14sp"/>

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/like_this_app"
                    android:textColor="@color/MyerListBlue"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:elevation="0sp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
                    card_view:cardBackgroundColor="@android:color/transparent"
                    card_view:cardCornerRadius="0dp"
                    card_view:cardElevation="0dp">

                    <RelativeLayout
                        android:id="@+id/activity_about_donate_rl"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ripple_clip"
                        android:clickable="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:autoLink="web"
                            android:padding="10sp"
                            android:text="@string/treat_me_a_drink"
                            android:textColor="@android:color/black"
                            android:textColorLink="@android:color/black"
                            android:textSize="14sp"/>

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:elevation="0sp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
                    card_view:cardBackgroundColor="@android:color/transparent"
                    card_view:cardCornerRadius="0dp"
                    card_view:cardElevation="0dp">

                    <RelativeLayout
                        android:id="@+id/activity_about_rate_rl"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ripple_clip"
                        android:clickable="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:autoLink="web"
                            android:padding="10sp"
                            android:text="@string/give_me_a_rate"
                            android:textColor="@android:color/black"
                            android:textColorLink="@android:color/black"
                            android:textSize="14sp"/>

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
